add profile page

--- a/src/pages/profile-message.html
+++ b/src/pages/profile-message.html
@@ -6,7 +6,7 @@
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Опросы</title>
-	<link rel="stylesheet" href="main.c3c93b9d.css">
+	<link rel="stylesheet" href="../styles/main.scss">
 </head>
 <body>
 <main class="main pt-0 pt-md-4" style="overflow-x: hidden">
@@ -25,7 +25,7 @@
 					<div class="user-profile mt-5">
 						<div class="user-profile__row-image">
 							<div class="user-profile__image-wrapper">
-								<img src="ava-3.5f58331d.jpg" alt="user avatar" class="user-profile__image">
+								<img src="../../public/images/ava-3.jpg" alt="user avatar" class="user-profile__image">
 							</div>
 						</div>
 
@@ -36,8 +36,8 @@
 
 						<div class="user-profile__row row-sm-revert">
 							<div class="user-profile__text-wrapper">
-									<div class="user-profile__text gray-600">Город:</div>
-									<div class="user-profile__text blue-dark fw-medium">Название города</div>
+								<div class="user-profile__text gray-600">Город:</div>
+								<div class="user-profile__text blue-dark fw-medium">Название города</div>
 							</div>
 							<div class="user-profile__text gray-600">На сайте с 11 сентября 1999 года</div>
 						</div>
@@ -52,11 +52,15 @@
 						</div>
 					</div>
 					<nav class="nav profile-tabs mt-4" role="tablist">
-						<a class=" btn btn-profile active" href="#nav-posts" data-toggle="tab" role="tab" aria-controls="nav-posts" aria-selected="true">Посты (<span>5628</span>)</a>
-						<a class=" btn btn-profile" href="#nav-comments" data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Комментарии
+						<a class=" btn btn-profile active" href="#nav-posts"
+							 data-toggle="tab" role="tab" aria-controls="nav-posts" aria-selected="true">Посты (<span>5628</span>)</a>
+						<a class=" btn btn-profile" href="#nav-comments"
+							 data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Комментарии
 							(<span>3452</span>)</a>
-						<a class=" btn btn-profile notice" href="#nav-message" data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Сообщения</a>
-						<a class=" btn btn-profile" href="#nav-comments" data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Закладки (<span>5</span>)</a>
+						<a class=" btn btn-profile notice" href="#nav-message"
+							 data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Сообщения</a>
+						<a class=" btn btn-profile" href="#nav-comments"
+							 data-toggle="tab" role="tab" aria-controls="nav-home" aria-selected="false">Закладки (<span>5</span>)</a>
 					</nav>
 					<div class="tab-content mt-4" id="nav-tabContent">
 						<div class="tab-pane fade show active" id="nav-posts" role="tabpanel" aria-labelledby="list-last-list">
@@ -76,7 +80,7 @@
 								<div class="profile-message__list mt-4">
 									<div class="message-item">
 										<div class="message-item__image notice">
-											<img src="ava-4.ca045449.jpg" class="image" alt="user avatar">
+											<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 										</div>
 										<div class="message-item__left">
 											<div class="message-item__row">
@@ -93,7 +97,7 @@
 												<div class="preview-statistic green">
 													<div class="preview-statistic__posts-counter">
 														<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
-															<use xlink:href="icons.e09a2327.svg#icon-chat"></use>
+															<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
 														</svg>
 														<div class="preview-statistic__num">40</div>
 														<span class="preview-statistic__new-post">(+1)</span>
@@ -104,7 +108,7 @@
 									</div>
 									<div class="message-item">
 										<div class="message-item__image notice">
-											<img src="ava-4.ca045449.jpg" class="image" alt="user avatar">
+											<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 										</div>
 										<div class="message-item__left">
 											<div class="message-item__row">
@@ -126,7 +130,7 @@
 												<div class="preview-statistic">
 													<div class="preview-statistic__posts-counter">
 														<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
-															<use xlink:href="icons.e09a2327.svg#icon-chat"></use>
+															<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
 														</svg>
 														<div class="preview-statistic__num">40</div>
 													</div>
@@ -136,7 +140,7 @@
 									</div>
 									<div class="message-item">
 										<div class="message-item__image notice">
-											<img src="ava-4.ca045449.jpg" class="image" alt="user avatar">
+											<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 										</div>
 										<div class="message-item__left">
 											<div class="message-item__row">
@@ -153,7 +157,7 @@
 												<div class="preview-statistic">
 													<div class="preview-statistic__posts-counter">
 														<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
-															<use xlink:href="icons.e09a2327.svg#icon-chat"></use>
+															<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
 														</svg>
 														<div class="preview-statistic__num">40</div>
 													</div>
@@ -174,7 +178,7 @@
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
 										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="icons.e09a2327.svg#icon-doubleRight"></use>
+											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
 										</svg>
 									</div>
 								</a>
@@ -183,7 +187,7 @@
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
 										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="icons.e09a2327.svg#icon-arrowRight"></use>
+											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
 										</svg>
 									</div>
 								</a>
@@ -200,7 +204,7 @@
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
 										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="icons.e09a2327.svg#icon-arrowRight"></use>
+											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
 										</svg>
 									</div>
 								</a>
@@ -209,7 +213,7 @@
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
 										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="icons.e09a2327.svg#icon-doubleRight"></use>
+											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
 										</svg>
 									</div>
 								</a>
@@ -223,6 +227,6 @@
 		</div>
 	</div>
 </main>
-<script src="main.ac5fb892.js"></script>
+<script src="../scripts/main.js"></script>
 </body>
 </html>
