--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Main</title>
+	<title>Новости</title>
 	<link rel="stylesheet" href="../styles/main.scss">
 </head>
 <body>
@@ -258,9 +258,9 @@
 				</section>
 				<div class="ads ads_md mt-space-md d-none d-sm-flex">Рекламный банер</div>
 
-				<div class="similar-news mt-space-md">
-					<div class="similar-news__title post-title">Похожие темы</div>
-					<div class="similar-news__wrapper mt-3">
+				<div class="post-list mt-space-md">
+					<div class="post-list__title post-title">Похожие темы</div>
+					<div class="post-list__wrapper mt-3">
 						<div class="post-preview post-preview_column">
 							<img src="../../public/images/fighter-3.jpg" alt="" class="post-preview__image">
 							<div class="post-preview__main">
@@ -441,14 +441,14 @@
 
 					<div class="comments-list mt-3 mt-md-4">
 						<div class="comments-item">
-							<div class="comments-card">
-								<div class="comments-card__header">
-									<div class="comments-card__left">
-										<div class="comments-card__avatar">
-											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
+							<div class="comments-item__wrap">
+								<div class="comments-item__header">
+									<div class="comments-item__col">
+										<div class="comments-item__avatar">
+											<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 										</div>
-										<a class="comments-card__name" href="#">Джонни</a>
-										<div class="comments-card__date">
+										<a class="comments-item__name" href="#">Джонни</a>
+										<div class="comments-item__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
 													<span class="">18.04.2020</span>
@@ -469,9 +469,9 @@
 									<div class="label label_red label-fill label-fill_red no-hover">новый</div>
 
 								</div>
-								<div class="comments-card__body mt-3">
-									<div class="comments-card__content">
-										<div class="comments-card__text">В Усть-Каменогорске завершился чемпионат Казахстана по вольной
+								<div class="comments-item__body mt-3">
+									<div class="comments-item__content">
+										<div class="comments-item__text">В Усть-Каменогорске завершился чемпионат Казахстана по вольной
 											борьбе
 											до 23 лет.Предлагаем вашему вниманию результаты турнира
 										</div>
@@ -480,8 +480,8 @@
 										<p class="mb-0">"Хэйни не рассист, он нигер" - Геннадий Днепр.</p>
 									</blockquote>
 								</div>
-								<div class="comments-card__footer mt-3">
-									<div class="comments-card__nav comments-nav">
+								<div class="comments-item__footer mt-3">
+									<div class="comments-item__nav comments-nav">
 										<div class="comments-nav__hover-users hover-users">
 											<button class="comments-nav__icon btn-icon btn-icon_green">
 												<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
@@ -551,7 +551,7 @@
 											</svg>
 										</button>
 									</div>
-									<div class="comments-card__nav comments-nav">
+									<div class="comments-item__nav comments-nav">
 										<button class="comments-nav__like comments-nav__icon btn-icon lock">
 											<svg width="12" height="17" class="icon" viewBox="0 0 12 17">
 												<use xlink:href="../../public/icons/icons.svg#icon-lock"/>
@@ -569,16 +569,16 @@
 										</button>
 									</div>
 								</div>
-								<div class="comments-card__comments-inner mt-3">
-									<div class="comments-card">
-										<div class="comments-card__header">
-											<div class="comments-card__left">
-												<div class="comments-card__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
+								<div class="comments-item__comments-inner mt-3">
+									<div class="comments-item__wrap">
+										<div class="comments-item__header">
+											<div class="comments-item__col">
+												<div class="comments-item__avatar">
+													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
 
-												<a class="comments-card__name" href="#">Джонни</a>
-												<div class="comments-card__date">
+												<a class="comments-item__name" href="#">Джонни</a>
+												<div class="comments-item__date">
 													<div class="post-info post-info_sm post-info_gray-600">
 														<div class="post-info__date">
 															<span class="">18.04.2020</span>
@@ -589,15 +589,15 @@
 											</div>
 
 										</div>
-										<div class="comments-card__body mt-3">
-											<div class="comments-card__content">
-												<div class="comments-card__text">Да, хорош бой! Ажиотаж был неслабый, Оскар вроде после простоя
+										<div class="comments-item__body mt-3">
+											<div class="comments-item__content">
+												<div class="comments-item__text">Да, хорош бой! Ажиотаж был неслабый, Оскар вроде после простоя
 													выходил, и многие не давали ему шанса. А он опять по красоте все сделал.
 												</div>
 											</div>
 										</div>
-										<div class="comments-card__footer mt-3">
-											<div class="comments-card__nav comments-nav">
+										<div class="comments-item__footer mt-3">
+											<div class="comments-item__nav comments-nav">
 												<div class="comments-nav__hover-users hover-users">
 													<button class="comments-nav__icon btn-icon btn-icon_green">
 														<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
@@ -673,7 +673,7 @@
 													</svg>
 												</button>
 											</div>
-											<div class="comments-card__nav comments-nav">
+											<div class="comments-item__nav comments-nav">
 												<button class="comments-nav__like comments-nav__icon btn-icon lock">
 													<svg width="12" height="17" class="icon" viewBox="0 0 12 17">
 														<use xlink:href="../../public/icons/icons.svg#icon-lock"/>
@@ -696,14 +696,14 @@
 							</div>
 						</div>
 						<div class="comments-item">
-							<div class="comments-card">
-								<div class="comments-card__header">
-									<div class="comments-card__left">
-										<div class="comments-card__avatar">
-											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
+							<div class="comments-item__wrap">
+								<div class="comments-item__header">
+									<div class="comments-item__col">
+										<div class="comments-item__avatar">
+											<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 										</div>
-										<a class="comments-card__name" href="#">Джонни</a>
-										<div class="comments-card__date">
+										<a class="comments-item__name" href="#">Джонни</a>
+										<div class="comments-item__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
 													<span class="">18.04.2020</span>
@@ -722,22 +722,22 @@
 										</div>
 									</div>
 								</div>
-								<div class="comments-card__body mt-3">
-									<div class="comments-card__content">
-										<p class="comments-card__text">Это первый бой, в котором обозначился серьезный спад Золотого.
+								<div class="comments-item__body mt-3">
+									<div class="comments-item__content">
+										<p class="comments-item__text">Это первый бой, в котором обозначился серьезный спад Золотого.
 											Заметно невооружённым глазом, что он очень медленный, затянутый, работа на ногах сведена к
 											минимуму. Никогда Оскар не был ещё таким медленным.</p>
-										<p class="comments-card__text">Но мощная колотуха слева, бычье здоровье и бетонный держак - никуда
+										<p class="comments-item__text">Но мощная колотуха слева, бычье здоровье и бетонный держак - никуда
 											не делись.</p>
-										<p class="comments-card__text">Майорга и сам был не в лучшей форме. После уничтожения, устроенного
+										<p class="comments-item__text">Майорга и сам был не в лучшей форме. После уничтожения, устроенного
 											ему Тито, он уже пошел на спад, и скорей всего Тринидад его пробил.</p>
 									</div>
 									<blockquote class="blockquote mt-2">
 										<p class="mb-0">"Хэйни не рассист, он нигер" - Геннадий Днепр.</p>
 									</blockquote>
 								</div>
-								<div class="comments-card__footer mt-3">
-									<div class="comments-card__nav comments-nav">
+								<div class="comments-item__footer mt-3">
+									<div class="comments-item__nav comments-nav">
 										<div class="comments-nav__hover-users hover-users">
 											<button class="comments-nav__icon btn-icon btn-icon_green">
 												<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
@@ -807,7 +807,7 @@
 											</svg>
 										</button>
 									</div>
-									<div class="comments-card__notice mt-2 mt-sm-0 notice-authorization">
+									<div class="comments-item__notice mt-2 mt-sm-0 notice-authorization">
 										<a href="#" class="notice-authorization__link">Войдите</a>
 										<span>или</span>
 										<a href="#" class="notice-authorization__link">Зарегиструруйтесь</a>
@@ -817,14 +817,14 @@
 							</div>
 						</div>
 						<div class="comments-item">
-							<div class="comments-card">
-								<div class="comments-card__header">
-									<div class="comments-card__left">
-										<div class="comments-card__avatar">
-											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
+							<div class="comments-item__wrap">
+								<div class="comments-item__header">
+									<div class="comments-item__col">
+										<div class="comments-item__avatar">
+											<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 										</div>
-										<a class="comments-card__name" href="#">Джонни</a>
-										<div class="comments-card__date">
+										<a class="comments-item__name" href="#">Джонни</a>
+										<div class="comments-item__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
 													<span class="">18.04.2020</span>
@@ -843,9 +843,9 @@
 										</div>
 									</div>
 								</div>
-								<div class="comments-card__body mt-3">
-									<div class="comments-card__content">
-										<div class="comments-card__warning warning-message">
+								<div class="comments-item__body mt-3">
+									<div class="comments-item__content">
+										<div class="comments-item__warning warning-message">
 											<button class="warning-message__btn">Посмотреть комментарий</button>
 											<div class="warning-message__text">Комментарий закрыт по причине:
 												<span class="warning-message__value">Политика</span>
@@ -857,8 +857,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="comments-card__footer mt-3">
-								<div class="comments-card__nav comments-nav">
+							<div class="comments-item__footer mt-3">
+								<div class="comments-item__nav comments-nav">
 									<div class="comments-nav__hover-users hover-users">
 										<button class="comments-nav__icon btn-icon btn-icon_green">
 											<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
@@ -928,7 +928,7 @@
 										</svg>
 									</button>
 								</div>
-								<div class="comments-card__nav comments-nav">
+								<div class="comments-item__nav comments-nav">
 									<button class="comments-nav__like comments-nav__icon btn-icon lock">
 										<svg width="12" height="17" class="icon" viewBox="0 0 12 17">
 											<use xlink:href="../../public/icons/icons.svg#icon-lock"/>
