--- a/src/pages/profile-message.html
+++ b/src/pages/profile-message.html
@@ -75,7 +75,19 @@
 								</div>
 								<div class="message-wrapper__body user-chat mt-4">
 									<div class="message-body received-el">
+										<div class="message-body__date post-info">
+											<div class="post-info__author">NoMas</div>
+											<div class="post-info__date">
+												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
+													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
+												</svg>
+												<span class="ml-1">17.01.2020</span>
+											</div>
+											<span class="post-info__time">13:20</span>
+										</div>
 										<div class="message-body__cloud-text">Привет.</div>
+									</div>
+									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
@@ -85,10 +97,11 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body sent-el">
 										<div class="message-body__cloud-text">???</div>
+									</div>
+									<div class="message-body received-el">
 										<div class="message-body__date post-info">
+											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
 													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
@@ -97,9 +110,9 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body received-el">
 										<div class="message-body__cloud-text">Ты теперь будешь “СобАчих”... Или “СобачИх”!</div>
+									</div>
+									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
@@ -109,10 +122,11 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body sent-el">
 										<div class="message-body__cloud-text">Эм... Что вы курите, Сударь? Не неси хуйни, короче.</div>
+									</div>
+									<div class="message-body received-el">
 										<div class="message-body__date post-info">
+											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
 													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
@@ -121,15 +135,16 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body received-el">
 										<div class="message-body__cloud-text">Вот представь разговор двух местных мукжиков:
 											- Эй.. Ты про СабочИха слыхал?
 											- Это не тот ли, который с СобАчихой в баньку зимой вместе часто бегали?
 											Миша, Слава - вот вам пасхалка и первое что должно быть в вашей обратной связи, к чему отсылка
 											этого бессмысленного диалога.
 										</div>
-										<div class="message-body__time message-body__date post-info">
+									</div>
+									<div class="message-body received-el">
+										<div class="message-body__date post-info">
+											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
 													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
@@ -138,15 +153,16 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body received-el">
 										<div class="message-body__cloud-text">Вот представь разговор двух местных мукжиков:
 											- Эй.. Ты про СабочИха слыхал?
 											- Это не тот ли, который с СобАчихой в баньку зимой вместе часто бегали?
 											Миша, Слава - вот вам пасхалка и первое что должно быть в вашей обратной связи, к чему отсылка
 											этого бессмысленного диалога.
 										</div>
-										<div class="message-body__time message-body__date post-info">
+									</div>
+									<div class="message-body received-el">
+										<div class="message-body__date post-info">
+											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
 													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
@@ -155,60 +171,14 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body received-el">
 										<div class="message-body__cloud-text">Вот представь разговор двух местных мукжиков:
 											- Эй.. Ты про СабочИха слыхал?
 											- Это не тот ли, который с СобАчихой в баньку зимой вместе часто бегали?
 											Миша, Слава - вот вам пасхалка и первое что должно быть в вашей обратной связи, к чему отсылка
 											этого бессмысленного диалога.
-										</div>
-										<div class="message-body__time message-body__date post-info">
-											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
-												<span class="ml-1">17.01.2020</span>
-											</div>
-											<span class="post-info__time">13:20</span>
-										</div>
-									</div>
-									<div class="message-body received-el">
-										<div class="message-body__cloud-text">Вот представь разговор двух местных мукжиков:
-											- Эй.. Ты про СабочИха слыхал?
-											- Это не тот ли, который с СобАчихой в баньку зимой вместе часто бегали?
-											Миша, Слава - вот вам пасхалка и первое что должно быть в вашей обратной связи, к чему отсылка
-											этого бессмысленного диалога.
-										</div>
-										<div class="message-body__time message-body__date post-info">
-											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
-												<span class="ml-1">17.01.2020</span>
-											</div>
-											<span class="post-info__time">13:20</span>
-										</div>
-									</div>
-									<div class="message-body received-el">
-										<div class="message-body__cloud-text">Вот представь разговор двух местных мукжиков:
-											- Эй.. Ты про СабочИха слыхал?
-											- Это не тот ли, который с СобАчихой в баньку зимой вместе часто бегали?
-											Миша, Слава - вот вам пасхалка и первое что должно быть в вашей обратной связи, к чему отсылка
-											этого бессмысленного диалога.
-										</div>
-										<div class="message-body__time message-body__date post-info">
-											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
-												<span class="ml-1">17.01.2020</span>
-											</div>
-											<span class="post-info__time">13:20</span>
 										</div>
 									</div>
 									<div class="message-body sent-el">
-										<div class="message-body__cloud-text">Клиника.</div>
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
@@ -218,9 +188,9 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
+										<div class="message-body__cloud-text">Клиника.</div>
 									</div>
 									<div class="message-body sent-el">
-										<div class="message-body__cloud-text">Клиника.</div>
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
 												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
@@ -230,18 +200,7 @@
 											</div>
 											<span class="post-info__time">13:20</span>
 										</div>
-									</div>
-									<div class="message-body sent-el">
 										<div class="message-body__cloud-text">Клиника.</div>
-										<div class="message-body__date post-info">
-											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
-												<span class="ml-1">17.01.2020</span>
-											</div>
-											<span class="post-info__time">13:20</span>
-										</div>
 									</div>
 								</div>
 								<form action="#">
