--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -12,7 +12,8 @@
 <div class="pt-md-full">
 	<header class="header fixed-md-top">
 		<div class="container-fluid container-md">
-			<nav class="navbar-main navbar-expand-lg" id="header-nav">
+
+			<nav class="navbar-main navbar-expand-lg pl-0" id="header-nav">
 				<div class="navbar-main__left">
 					<a class="navbar-brand" href="#">
 						<img src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
@@ -49,18 +50,25 @@
 						</li>
 					</ul>
 				</div>
-				<div class="navbar-main__center">
-					<div>
-						<form class="form-inline search-group">
-							<input class="input input_sm input-radius_sm mr-sm-2" type="search" placeholder="Поиск..." aria-label="Search" style="width: 100%;">
-							<button class="nav-link nav-link_btn search-btn" type="submit">
+
+				<div class="navbar-main__center mt-2 mt-sm-0">
+					<nav class="nav-user notice-position-right">
+						<div>
+							<button class="search-btn" type="button" data-open-search="top-search">
 								<svg width="21" height="21" class="icon-search" viewBox="0 0 35 35">
 									<use xlink:href="../../public/icons/icons.svg#icon-search-2"/>
 								</svg>
 							</button>
-						</form>
-					</div>
-					<nav class="nav-user notice-position-right">
+							<form class="search-group d-none" id="top-search">
+								<input class="input input-search input_sm input-radius_sm mr-sm-2" type="search" placeholder="Поиск..." aria-label="Search" style="width: 100%;">
+								<button class="clear-btn d-none">x</button>
+								<button class="search-btn" type="submit">
+									<svg width="21" height="21" class="icon-search" viewBox="0 0 35 35">
+										<use xlink:href="../../public/icons/icons.svg#icon-search-2"/>
+									</svg>
+								</button>
+							</form>
+						</div>
 						<a href="#" class="nav-user__link notice notice_sm">
 							<svg width="15" height="19" class="icon" viewBox="0 0 15 19">
 								<use xlink:href="../../public/icons/icons.svg#icon-user"/>
@@ -87,8 +95,10 @@
 							</svg>
 						</a>
 					</nav>
+
 				</div>
 				<div class="navbar-main__right">
+
 					<button class="burger-btn" type="button" data-toggle="collapse"
 									id="burger-btn" data-target="#navbarNav"
 									aria-controls="navbarNav" aria-label="Toggle navigation">
