--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -278,12 +278,119 @@
 												<div class="comments-item__avatar">
 													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
-												<div class="d-flex">
+												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
 													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
-												<div class="text-wrapper">
+												<div class="comments-item__text-wrapper d-inline">
+													<span class="comments-item__text gray-600 fz-sm">В теме:</span>
+													<a href="#" class="comments-item__link">Тони Белью: “Если говорить о боксерских навыках, то Усик на сегодня лучший ”
+													</a>
+												</div>
+												<div class="comments-item__date">
+													<div class="post-info post-info_sm post-info_gray-600">
+														<div class="post-info__date">
+															<span class="">18.04.2020</span>
+														</div>
+														<span class="post-info__time">20:34</span>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="comments-item__body mt-3">
+											<div class="comments-item__content">
+												<div class="comments-item__text">Приляжет Чисора или табуретка будет.</div>
+											</div>
+
+										</div>
+										<div class="comments-item__footer mt-3">
+											<div class="comments-item__nav comments-nav">
+												<div class="comments-nav__hover-users hover-users">
+													<button class="comments-nav__icon btn-icon btn-icon_green">
+														<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
+															<use xlink:href="../../public/icons/icons.svg#icon-like-2"/>
+														</svg>
+														<span class="btn-icon__text">7</span>
+													</button>
+													<ul class="like-list">
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+																																										alt="avatar"></a>
+														</li>
+														<li class="like-list__item">
+															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
+																																										alt="avatar"></a>
+														</li>
+													</ul>
+												</div>
+												<button class="comments-nav__icon btn-icon">
+													<svg width="16" height="15" class="icon" viewBox="0 0 16 15">
+														<use xlink:href="../../public/icons/icons.svg#icon-blockquote"/>
+													</svg>
+												</button>
+												<button class="comments-nav__icon btn-icon">
+													<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
+														<use xlink:href="../../public/icons/icons.svg#icon-reply"/>
+													</svg>
+												</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="comments-item comments-item_grid">
+									<div class="comments-item__wrap">
+										<div class="comments-item__header">
+											<div class="comments-item__col">
+												<div class="comments-item__avatar">
+													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
+												</div>
+												<div class="d-inline mr-2">
+													<a class="comments-item__name" href="#">hrost</a>
+													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
+													<a class="comments-item__name" href="#">HiTMAN</a>
+												</div>
+												<div class="comments-item__text-wrapper d-inline">
 													<span class="comments-item__text gray-600 fz-sm">В теме:</span>
 													<a href="#" class="comments-item__link">Тони Белью: “Если говорить о боксерских навыках, то Усик на сегодня лучший ”
 													</a>
@@ -386,120 +493,12 @@
 												<div class="comments-item__avatar">
 													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
-												<div class="d-flex">
+												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
 													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
-												<div class="text-wrapper">
-													<span class="comments-item__text gray-600 fz-sm">В теме:</span>
-													<a href="#" class="comments-item__link">Тони Белью: “Если говорить о боксерских навыках, то Усик на сегодня лучший ”
-													</a>
-												</div>
-												<div class="comments-item__date">
-													<div class="post-info post-info_sm post-info_gray-600">
-														<div class="post-info__date">
-															<span class="">18.04.2020</span>
-														</div>
-														<span class="post-info__time">20:34</span>
-													</div>
-												</div>
-											</div>
-
-										</div>
-										<div class="comments-item__body mt-3">
-											<div class="comments-item__content">
-												<div class="comments-item__text">С другой стороны реализация намеченных плановых заданий позволяет выполнять важные задания по разработке системы обучения кадров, соответствует насущным потребностям. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет выполнять важные задания по разработке дальнейших направлений развития.</div>
-											</div>
-
-										</div>
-										<div class="comments-item__footer mt-3">
-											<div class="comments-item__nav comments-nav">
-												<div class="comments-nav__hover-users hover-users">
-													<button class="comments-nav__icon btn-icon btn-icon_green">
-														<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
-															<use xlink:href="../../public/icons/icons.svg#icon-like-2"/>
-														</svg>
-														<span class="btn-icon__text">7</span>
-													</button>
-													<ul class="like-list">
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
-																																										alt="avatar"></a>
-														</li>
-														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/konor-mini.png"
-																																										alt="avatar"></a>
-														</li>
-													</ul>
-												</div>
-												<button class="comments-nav__icon btn-icon">
-													<svg width="16" height="15" class="icon" viewBox="0 0 16 15">
-														<use xlink:href="../../public/icons/icons.svg#icon-blockquote"/>
-													</svg>
-												</button>
-												<button class="comments-nav__icon btn-icon">
-													<svg width="16" height="17" class="icon" viewBox="0 0 16 17">
-														<use xlink:href="../../public/icons/icons.svg#icon-reply"/>
-													</svg>
-												</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="comments-item comments-item_grid">
-									<div class="comments-item__wrap">
-										<div class="comments-item__header">
-											<div class="comments-item__col">
-												<div class="comments-item__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
-												</div>
-												<div class="d-flex">
-													<a class="comments-item__name" href="#">hrost</a>
-													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
-													<a class="comments-item__name" href="#">HiTMAN</a>
-												</div>
-												<div class="text-wrapper">
+												<div class="comments-item__text-wrapper d-inline">
 													<span class="comments-item__text gray-600 fz-sm">В теме:</span>
 													<a href="#" class="comments-item__link">Тони Белью: “Если говорить о боксерских навыках, то Усик на сегодня лучший ”
 													</a>
@@ -602,12 +601,12 @@
 												<div class="comments-item__avatar">
 													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
-												<div class="d-flex">
+												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
 													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
-												<div class="text-wrapper">
+												<div class="comments-item__text-wrapper d-inline">
 													<span class="comments-item__text gray-600 fz-sm">В теме:</span>
 													<a href="#" class="comments-item__link">Тони Белью: “Если говорить о боксерских навыках, то Усик на сегодня лучший ”
 													</a>
@@ -625,7 +624,7 @@
 										</div>
 										<div class="comments-item__body mt-3">
 											<div class="comments-item__content">
-												<div class="comments-item__text">С другой стороны реализация намеченных плановых заданий позволяет выполнять важные задания по разработке системы обучения кадров, соответствует насущным потребностям. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет выполнять важные задания по разработке дальнейших направлений развития.</div>
+												<div class="comments-item__text">Приляжет Чисора или табуретка будет.</div>
 											</div>
 
 										</div>
@@ -703,15 +702,20 @@
 										</div>
 									</div>
 								</div>
+
 							</div>
 						</div>
 						<div class="tab-pane fade show active" id="nav-message" role="tabpanel" aria-labelledby="list-last-list">
 							<div class="profile-chats">
 								<div class="profile-chats__header">
 									<div class="post-title post-title_md">Мои сообщения</div>
-									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="customCheck1">
-										<label class="custom-control-label" for="customCheck1">Отметить все как непрочитанные</label>
+									<div class="d-flex">
+										<button class="btn-checkbox" id="customBtnCheck1">
+											<svg width="10" height="8" class="icon" viewBox="0 0 10 8">
+												<use xlink:href="../../public/icons/icons.svg#icon-checked"/>
+											</svg>
+										</button>
+										<label class="ml-2" for="customBtnCheck1">Отметить все как непрочитанные</label>
 									</div>
 								</div>
 								<div class="profile-chats__list mt-4">
@@ -731,7 +735,7 @@
 											</div>
 											<div class="message-item__row">
 												<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
-												<div class="preview-statistic green">
+												<div class="preview-statistic">
 													<div class="preview-statistic__posts-counter">
 														<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
 															<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
