--- a/src/pages/timetable.html
+++ b/src/pages/timetable.html
@@ -57,8 +57,8 @@
 								<div class="table__text_big">10:30</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile" data-event="Событие">
-								<div class="table__text">GCFC MMA 10 Golden Coat Fighting Championship</div>
+							<div class="table__col table__col_event-mobile" >
+								<div class="table__text bold">GCFC MMA 10 Golden Coat Fighting Championship</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
@@ -77,8 +77,8 @@
 							<div class="table__col">
 								<div class="table__text_big">14:50</div>
 							</div>
-							<div class="table__col table__col_event-mobile" data-event="Событие">
-								<div class="table__text">Rizin FF Rizin 23</div>
+							<div class="table__col table__col_event-mobile" >
+								<div class="table__text bold">Rizin FF Rizin 23</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
@@ -97,8 +97,8 @@
 							<div class="table__col">
 								<div class="table__text_big">20:00</div>
 							</div>
-							<div class="table__col table__col_event-mobile" data-event="Событие">
-								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 83</div>
+							<div class="table__col table__col_event-mobile" >
+								<div class="table__text bold">Dana White's Contender Series Contender Series 2020: Week 83</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
@@ -118,8 +118,8 @@
 								<div class="table__text_big">22:00</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile" data-event="Событие">
-								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 2</div>
+							<div class="table__col table__col_event-mobile" >
+								<div class="table__text bold">Dana White's Contender Series Contender Series 2020: Week 2</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
