--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -54,15 +54,22 @@
 				<div class="navbar-main__center mt-2 mt-sm-0">
 					<nav class="nav-user notice-position-right">
 						<div>
-							<button class="search-btn" type="button" data-open-search="top-search">
+							<button class="nav-user__search search-btn" type="button" data-open-search="top-search">
 								<svg width="21" height="21" class="icon-search" viewBox="0 0 35 35">
 									<use xlink:href="../../public/icons/icons.svg#icon-search-2"/>
 								</svg>
 							</button>
 							<form class="search-group d-none" id="top-search">
-								<input class="input input-search input_sm input-radius_sm mr-sm-2" type="search" placeholder="Поиск..." aria-label="Search" style="width: 100%;">
-								<button class="clear-btn d-none">x</button>
-								<button class="search-btn" type="submit">
+								<div class="search-group__input-wrapper">
+									<input class="search-group__input input input-search input_sm input-radius_sm" type="search"
+												 placeholder="Поиск..." aria-label="Search" style="width: 100%;">
+									<button class="search-group__clear-btn clear-btn d-none">
+										<svg width="20" height="20" class="icon-search" viewBox="0 0 20 20">
+											<use xlink:href="../../public/icons/icons.svg#icon-clear"/>
+										</svg>
+									</button>
+								</div>
+								<button class="nav-user__search search-btn" type="submit">
 									<svg width="21" height="21" class="icon-search" viewBox="0 0 35 35">
 										<use xlink:href="../../public/icons/icons.svg#icon-search-2"/>
 									</svg>
@@ -97,7 +104,7 @@
 					</nav>
 
 				</div>
-				<div class="navbar-main__right">
+				<div class="navbar-main__right ml-4">
 
 					<button class="burger-btn" type="button" data-toggle="collapse"
 									id="burger-btn" data-target="#navbarNav"
