aÐadd article-nav in mobile version news-page

--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -231,7 +231,7 @@
 										</svg>
 										<span>Предыдущая новость</span>
 									</a>
-									<div class="article-nav-item__body mt-3">
+									<div class="article-nav-item__body mt-2 mt-sm-3">
 										<img src="../../public/images/fighter-3.jpg" alt="nav image" class="article-nav-item__image">
 										<a href="#" class="article-nav-item__title mt-2">Энтони Диррелл назвал трех лучших боксеров мира</a>
 									</div>
@@ -244,9 +244,9 @@
 											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight-2"/>
 										</svg>
 									</a>
-									<div class="article-nav-item__body mt-3">
-										<img src="../../public/images/fighter-3.jpg" alt="nav image" class="article-nav-item__image">
+									<div class="article-nav-item__body mt-2 mt-sm-3">
 										<a href="#" class="article-nav-item__title mt-2">Энтони Диррелл назвал трех лучших боксеров мира</a>
+										<img src="../../public/images/fighter-3.jpg" alt="nav image" class="article-nav-item__image">
 									</div>
 								</div>
 
